# OneNote-MCP-Server

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  inkml_raster.py  notebook_cache.py  onenote_mcp_server.py  pyproject.toml  secrets_env.py  server_entry.py
.github/workflows/: docker-publish.yml
tests/: conftest.py  test_auth_async.py  test_cache.py  test_connector_auth.py  test_find_pages.py  test_gateway.py  test_graph_paging.py  test_raster.py  test_tools.py
