[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onenote-mcp-server"
version = "1.1.1"
description = "OneNote MCP Sidekick - read handwritten ink, summarize, write back typed pages"
authors = [
    {name = "Chris Pitman"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Groupware",
]
keywords = ["onenote", "mcp", "claude", "ai", "knowledge-base", "microsoft", "graph-api"]

dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=2.8,<3",
    "msal>=1.25.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "uvicorn>=0.30"
]

[project.urls]
Homepage = "https://github.com/pitslug/OneNote-MCP-Server"
Repository = "https://github.com/pitslug/OneNote-MCP-Server"
Issues = "https://github.com/pitslug/OneNote-MCP-Server/issues"
Documentation = "https://github.com/pitslug/OneNote-MCP-Server#readme"

[project.scripts]
onenote-mcp-server = "onenote_mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
